--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- Page Content -->
   <section>
     <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center">
-      <div class="w-75 p-3">
+      <div class="center-block">
         <img src='css/tarou.gif' class="img-fluid" id="tarou_img" alt="Tarou">
       </div>
       <h1 class="prompt_txt">Consult Tarou</h1>
